# linear-algebra-in-rust

./: Cargo.toml  README.md
src/: angles.rs  coords.rs  lib.rs  macros.rs  main.rs  utils.rs
src/matrix/: four_by_four.rs  matrix.rs  matrix3.rs  matrix4.rs
src/vector/: vector.rs  vector1.rs  vector2.rs  vector3.rs  vector4.rs  vector_iterator.rs
