[package]
name = "linear_algebra"
version = "0.1.0"
authors = ["Ludwig Granstedt <ludwiggranstedt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "test"
path = "src/bin/test.rs"
test = false
bench = false

[lib]
name = "linear_algebra"

[dependencies]
num-traits = "0.2.14"
